--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+       <img 
+    src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+    />
+        <img 
+    src="/Users/aman/Desktop/Screen Shot 2023-03-11 at 7.17.49 PM.png"
+    alt="screenshot"
+    />
+    <img 
+    src="https://i.imgur.com/H1qsYEl.png"
+    alt=" =ALT3"
+    title="Plants"
+    />
   </body>
 </html>
